ARM32: -XX:MaxVectorSize=16 makes SIGILL

XMLWordPrintable

    • b22
    • arm
    • linux

      SIGILL can be reproduced on test/hotspot/jtreg/compiler/c2/cr6340864/TestDoubleVect.java test on ARM32 without NEON support. The test sets up -XX:MaxVectorSize=16 which enables compiler to produce VLD1/VST1 instructions.

            Assignee:
            Boris Ulasevich
            Reporter:
            Boris Ulasevich
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: