8220656: ARM32: -XX:MaxVectorSize=16 makes SIGILL

Reviewed-by: dholmes, dlong